test/testroot/etc/sysconfig/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*nat
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o tun+ -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:RH-Firewall-1-INPUT - [0:0]
:LOCAL - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -p 50 -j ACCEPT
-A RH-Firewall-1-INPUT -p 51 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A RH-Firewall-1-INPUT -m udp -p udp --dport 6669 -j ACCEPT
-A RH-Firewall-1-INPUT -m tcp -p tcp --dport 6669 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m udp -p udp --dport 53 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 24800 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 139 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 445 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT --src 192.168.10.0/24 -j LOCAL
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
-A LOCAL -m state --state NEW -m tcp -p tcp --dport 514 -j ACCEPT
-A LOCAL -m state --state NEW -m udp -p udp --dport 514 -j ACCEPT
-A LOCAL -m state --state NEW -m tcp -p tcp --dport 631 -j ACCEPT
-A LOCAL -m state --state NEW -m udp -p udp --dport 631 -j ACCEPT
-A LOCAL -m state --state NEW -m tcp -p tcp --dport 2049 -j ACCEPT
-A LOCAL -m state --state NEW -m udp -p udp --dport 2049 -j ACCEPT
-A LOCAL -m state --state NEW -m tcp -p tcp --dport 111 -j ACCEPT
-A LOCAL -m state --state NEW -m udp -p udp --dport 111 -j ACCEPT
-A LOCAL -m state --state NEW -m udp -p udp --dport 137:139 -j ACCEPT
-A LOCAL -m state --state NEW -m udp -p udp --dport 445 -j ACCEPT
-A LOCAL -m state --state NEW -m tcp -p tcp --dport 1024: -j ACCEPT
-A LOCAL -m state --state NEW -m udp -p udp --dport 1024: -j ACCEPT
-A LOCAL -j REJECT --reject-with icmp-host-prohibited

COMMIT
